tests/ui/issues/issue-21596.rs
fn main() {
    let x = 8u8;
    let z: *const u8 = &x;
    println!("{}", z.to_string());  //~ ERROR E0599
}
